--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,11 +2,13 @@
   <section id="banner">
     <div class="content">
       <header>
-        <h1>Hi, I’m Editorial<br />
-        by HTML5 UP</h1>
-        <p>A free and fully responsive site template</p>
+        <h1>Hi, I’m Alaina<br /></h1>
+        <p>A data scientist with a Ph.D. in Oceanography from Scripps Institution of Oceanography</p>
       </header>
-      <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+      <p>My research focused on studying how environmental changes impact marine microbial distributions. 
+      I have over 8 years of experience with managing, interpreting, and visualizing large environmental, ecologicaly, and metegenomic datasets.
+      Throughout my community, I am a notable R expert and commonly teach colleagues how to run statistical analyses, interpret model output, and visualize model results.
+        I am a seasoned mentor, a recognized leader in equity, diversity, and inclusion initiatives, and have been praised as an effective science communicator. </p>
       <ul class="actions">
         <li><a href="#" class="button big">Learn More</a></li>
       </ul>
