--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,51 +16,37 @@
           </header>
           <ul>
             <li><a href="{{ '' | absolute_url }}">Homepage</a></li>
-            <li><a href="{{ 'generic.html' | absolute_url }}">Generic</a></li>
-            <li><a href="{{ 'elements.html' | absolute_url }}">Elements</a></li>
+            <li><a href="{{ 'CV.html' | absolute_url }}">CV</a></li>
             <li>
-              <span class="opener">Submenu</span>
+              <span class="opener">Publications</span>
               <ul>
-                <li><a href="#">Lorem Dolor</a></li>
-                <li><a href="#">Ipsum Adipiscing</a></li>
-                <li><a href="#">Tempus Magna</a></li>
-                <li><a href="#">Feugiat Veroeros</a></li>
+                <li><a href="{{ 'proj3.html' | absolute_url }}">Smith and Barton. 2024. Ecology and Evolution</a></li>
+                <li><a href="{{ 'proj2.html' | absolute_url }}">Smith et al. 2021. Limnology and Oceanography</a></li>
+                <li><a href="{{ 'proj1.html' | absolute_url }}">Smith and Edwards. 2019. Oikos.</a></li>
               </ul>
             </li>
             <li><a href="#">Etiam Dolore</a></li>
             <li><a href="#">Adipiscing</a></li>
-            <li>
-              <span class="opener">Another Submenu</span>
-              <ul>
-                <li><a href="#">Lorem Dolor</a></li>
-                <li><a href="#">Ipsum Adipiscing</a></li>
-                <li><a href="#">Tempus Magna</a></li>
-                <li><a href="#">Feugiat Veroeros</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Maximus Erat</a></li>
-            <li><a href="#">Sapien Mauris</a></li>
-            <li><a href="#">Amet Lacinia</a></li>
           </ul>
         </nav>
 
       <!-- Section -->
         <section>
           <header class="major">
-            <h2>Ante interdum</h2>
+            <h2>Projects</h2>
           </header>
           <div class="mini-posts">
             <article>
-              <a href="#" class="image"><img src="assets/images/pic07.jpg" alt="" /></a>
-              <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+              <a href="{{ 'proj3.html' | absolute_url }}" class="image"><img src="assets/images/pic07.jpg" alt="" /></a>
+              <p>Effects of temperature variability and dispersal on phytoplankton realized temperature niches </p>
             </article>
             <article>
-              <a href="#" class="image"><img src="assets/images/pic08.jpg" alt="" /></a>
-              <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+              <a href="{{ 'proj2.html' | absolute_url }}" class="image"><img src="assets/images/pic08.jpg" alt="" /></a>
+              <p>Comparing <i>Prochlorococcus</i> temperature niches in the lab and across ocean basins.</p>
             </article>
             <article>
-              <a href="#" class="image"><img src="assets/images/pic09.jpg" alt="" /></a>
-              <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+              <a href="{{ 'proj1.html' | absolute_url }}" class="image"><img src="assets/images/pic09.jpg" alt="" /></a>
+              <p>Maintenance of functional diversity through multiple timescales of resource management</p>
             </article>
           </div>
           <ul class="actions">
@@ -73,12 +59,11 @@
           <header class="major">
             <h2>Get in touch</h2>
           </header>
-          <p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+          <p>I'd love to hear from you! I am currently looking for opprotunities to continue developing my data science skills.</p>
           <ul class="contact">
             <li class="fa-envelope-o"><a href="#">{{ site.email }}</a></li>
             <li class="fa-phone">{{ site.phone }}</li>
-            <li class="fa-home">{{ site.street_address }}<br />
-            {{ site.city }}, {{ site.state }} {{ site.zip_code }}<br />
+            <li class="fa-home">{{ site.city }}, {{ site.state }} {{ site.zip_code }}<br />
             {{ site.country }}</li>
           </ul>
         </section>
