--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,15 +37,15 @@
           </header>
           <div class="mini-posts">
             <article>
-              <a href="{{ 'proj3.html' | absolute_url }}" class="image"><img src="assets/images/pic07.jpg" alt="" /></a>
+              <a href="{{ 'proj3.html' | absolute_url }}" class="image"><img src="assets/images/model_3.png" alt="" /></a>
               <p>Effects of temperature variability and dispersal on phytoplankton realized temperature niches </p>
             </article>
             <article>
-              <a href="{{ 'proj2.html' | absolute_url }}" class="image"><img src="assets/images/pic08.jpg" alt="" /></a>
+              <a href="{{ 'proj2.html' | absolute_url }}" class="image"><img src="assets/images/p2_map.png" alt="" /></a>
               <p>Comparing <i>Prochlorococcus</i> temperature niches in the lab and across ocean basins.</p>
             </article>
             <article>
-              <a href="{{ 'proj1.html' | absolute_url }}" class="image"><img src="assets/images/pic09.jpg" alt="" /></a>
+              <a href="{{ 'proj1.html' | absolute_url }}" class="image"><img src="assets/images/p1_fig.png" alt="" /></a>
               <p>Maintenance of functional diversity through multiple timescales of resource management</p>
             </article>
           </div>
