--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -14,6 +14,6 @@
       </ul>
     </div>
     <span class="image object">
-      <img src="assets/images/pic10.jpg" alt="" />
+      <img src="assets/images/profile.png" alt="" />
     </span>
   </section>
