--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -46,7 +46,7 @@
             </article>
             <article>
               <a href="{{ 'proj1.html' | absolute_url }}" class="image"><img src="assets/images/p1_fig.png" alt="" /></a>
-              <p>Maintenance of functional diversity through multiple timescales of resource management</p>
+              <p>Effects of multiple timescales of resource supply on the maintenance of species and functional diversity</p>
             </article>
           </div>
           <ul class="actions">
