--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
           </header>
           <ul>
             <li><a href="{{ absolute_url }}">Homepage</a></li>
-            <li><a href="{{ 'CV.html' | absolute_url }}">CV</a></li>
+            <li><a href="{{ 'elements.html' | absolute_url }}">CV</a></li>
             <li>
               <span class="opener">Publications</span>
               <ul>
