--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -59,7 +59,7 @@
           <header class="major">
             <h2>Get in touch</h2>
           </header>
-          <p>I'd love to hear from you! I am currently looking for opprotunities to continue developing my data science skills.</p>
+          <p>I'd love to hear from you! I am currently looking for opportunities to continue developing my data science skills.</p>
           <ul class="contact">
             <li class="fa-envelope-o"><a href="#">{{ site.email }}</a></li>
             <li class="fa-phone">{{ site.phone }}</li>
