--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
       {% if site.linkedin_url %}
       <li><a href="{{ site.linkedin_url }}" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
       {% endif %}
-      {% if site.google_scholar %}
+      {% if site.google_scholar_url %}
       <li><a href="{{ site.google_scholar_url }}" class="icon fa-graduation-cap" target="_blank"><span class="label">Google Scholar</span></a></li>
       {% endif %}
     </ul>
