--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,7 +10,7 @@
       Throughout my community, I am a notable R expert and commonly teach colleagues how to run statistical analyses, interpret model output, and visualize model results.
         I am a seasoned mentor, a recognized leader in equity, diversity, and inclusion initiatives, and have been praised as an effective science communicator. </p>
       <ul class="actions">
-        <li><a href="#" class="button big">Learn More</a></li>
+        <li><a href="anoelsm.github.io/CV.html" class="button big">Learn More</a></li>
       </ul>
     </div>
     <span class="image object">
