--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -31,7 +31,7 @@
 		kerning-heading:	0.075em
 	);
 
-// Palette. f56a6a
+// Palette. 
 	$palette: (
 		bg:					#ffffff,
 		bg-alt:				#f5f6f7,
@@ -40,5 +40,5 @@
 		fg-light:			#9fa3a6,
 		border:				rgba(210,215,217,0.75),
 		border-bg:			transparentize(#e6ebed, 0.75),
-		accent:				#de73b3
+		accent:				#f56a6a
 	);
