--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -49,9 +49,9 @@
               <p>Effects of multiple timescales of resource supply on the maintenance of species and functional diversity</p>
             </article>
           </div>
-          <ul class="actions">
+          <!-- <ul class="actions">
             <li><a href="#" class="button">More</a></li>
-          </ul>
+          </ul> -->
         </section>
 
       <!-- Section -->
