--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -61,7 +61,7 @@
           </header>
           <p>I'd love to hear from you! I am currently looking for opportunities to continue developing my data science skills.</p>
           <ul class="contact">
-            <li class="fa-envelope-o"><a href="mailto:">{{ site.email }}</a></li>
+            <li class="fa-envelope-o"><a href="mailto:{{ site.email }}?subject=Hello%20from%20your%20website">{{ site.email }}</a></li>
             <li class="fa-phone">{{ site.phone }}</li>
             <li class="fa-home">{{ site.city }}, {{ site.state }} {{ site.zip_code }}<br />
             {{ site.country }}</li>
