--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,9 +20,9 @@
             <li>
               <span class="opener">Publications</span>
               <ul>
-                <li><a href="{{ 'proj3.html' | absolute_url }}">Smith and Barton. 2024. Ecology and Evolution</a></li>
-                <li><a href="{{ 'proj2.html' | absolute_url }}">Smith et al. 2021. Limnology and Oceanography</a></li>
-                <li><a href="{{ 'proj1.html' | absolute_url }}">Smith and Edwards. 2019. Oikos.</a></li>
+                <li><a href="{{ 'Smith&Barton-2024.html' | absolute_url }}">Smith and Barton. 2024. Ecology and Evolution</a></li>
+                <li><a href="{{ 'Smith_etal-2021.html' | absolute_url }}">Smith et al. 2021. Limnology and Oceanography</a></li>
+                <li><a href="{{ 'Smith&Edwards-2019.html' | absolute_url }}">Smith and Edwards. 2019. Oikos.</a></li>
               </ul>
             </li>
             <li><a href="#">Etiam Dolore</a></li>
@@ -37,15 +37,15 @@
           </header>
           <div class="mini-posts">
             <article>
-              <a href="{{ 'proj3.html' | absolute_url }}" class="image"><img src="assets/images/model_3.png" alt="" /></a>
+              <a href="{{ 'Smith&Barton-2024.html' | absolute_url }}" class="image"><img src="assets/images/Smith&Barton_2024-Fig01.png" alt="" /></a>
               <p>Effects of temperature variability and dispersal on phytoplankton realized temperature niches </p>
             </article>
             <article>
-              <a href="{{ 'proj2.html' | absolute_url }}" class="image"><img src="assets/images/p2_map.png" alt="" /></a>
+              <a href="{{ 'Smith_etal-2021.html' | absolute_url }}" class="image"><img src="assets/images/Smith_etal_2021-Fig01.png" alt="" /></a>
               <p>Comparing <i>Prochlorococcus</i> temperature niches in the lab and across ocean basins.</p>
             </article>
             <article>
-              <a href="{{ 'proj1.html' | absolute_url }}" class="image"><img src="assets/images/p1_fig.png" alt="" /></a>
+              <a href="{{ 'Smith&Edwards-2019.html' | absolute_url }}" class="image"><img src="assets/images/Smith&Edwards_2019-Fig01.png" alt="" /></a>
               <p>Effects of multiple timescales of resource supply on the maintenance of species and functional diversity</p>
             </article>
           </div>
