--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,7 +15,7 @@
             <h2>Menu</h2>
           </header>
           <ul>
-            <li><a href="{{ site.baseurl }}">Homepage</a></li>
+            <li><a href="{{ ' ' | absolute_url }}">Homepage</a></li>
             <li><a href="{{ 'CV.html' | absolute_url }}">CV</a></li>
             <li>
               <span class="opener">Publications</span>
