--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,7 @@
                 <li><a href="{{ 'Smith&Edwards-2019.html' | absolute_url }}">Smith and Edwards. 2019. Oikos.</a></li>
               </ul>
             </li>
-            <li><a href="#">Etiam Dolore</a></li>
-            <li><a href="#">Adipiscing</a></li>
+            <li><a href="{{ 'modelling_phytoplankton_communities.html' | absolute_url }}">Example Code</a></li>
           </ul>
         </nav>
 
