--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2652,8 +2652,9 @@
 				}
 
 		ul.jekyllcodex_accordion {
+			padding: 0;
 			position: relative;
-			margin: 1.4rem 0!important;
+			margin: -1rem 0!important;
 			border-bottom: 1px solid rgba(0,0,0,0.25);
 			padding-bottom: 0;
 		}
