--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2298,7 +2298,8 @@ ul.actions.fit.small li {
 ul.accordion {
   padding: 0;
   position: relative;
-  margin: -1rem 0;
+  margin-top: -1rem;
+  margin-bottom: 10;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   padding-bottom: 0;
 }
@@ -2308,6 +2309,7 @@ ul.accordion li {
 }
 ul.accordion li input {
   display: none;
+  opacity: 0;
 }
 ul.accordion li input:checked + label {
   font-weight: bold;
