--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2300,51 +2300,7 @@ ul.actions.fit.small {
 ul.actions.fit.small li {
   padding: 0 0 0 0.5em;
 }
-ul.accordion {
-  padding: 0;
-  position: relative;
-  margin-top: -1rem;
-  margin-bottom: 10;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-  padding-bottom: 0;
-}
-ul.accordion li {
-  border-top: 1px solid rgba(0, 0, 0, 0.25);
-  list-style: none;
-}
-ul.accordion li input {
-  display: none;
-  visibility: hidden
-}
-ul.accordion li input:checked + label {
-  font-weight: bold;
-}
-ul.accordion li input:checked + label + div {
-  display: block;
-}
-ul.accordion li input:checked + label::after {
-  transform: rotate(-45deg);
-}
-ul.accordion li label {
-  display: block;
-  cursor: pointer;
-  padding: 0.75rem 2.4rem 0.75rem 0;
-  margin: 0;
-}
-ul.accordion li label::after {
-  content: "+";
-  font-weight: normal;
-  font-size: 130%;
-  line-height: 1.1rem;
-  padding: 10;
-  position: absolute;
-  right: 1rem;
-  transition: all 0.15s ease-in-out;
-}
-ul.accordion li div {
-  display: none;
-  padding-bottom: 1.2rem;
-}
+
 ul.pagination {
   cursor: default;
   list-style: none;
@@ -2405,6 +2361,21 @@ dl dt {
 dl dd {
   margin-left: 2em;
 }
+ /* Accordion */
+.accordion > dt {
+  background-color: orange;
+  margin-bottom: 5px;
+  padding: 5px 5px;
+  color: white;
+  toggle: show;
+  width:99%;
+  }
+  .accordion > dd {
+    margin-bottom: 10px;
+    margin-left: 0px;
+    align: left;
+    toggle-visibility: toggle show;
+  }
 
 /* Table */
 .table-wrapper {
