--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2016,11 +2016,6 @@ input[type=radio] + label:before {
   top: 0;
   width: 1.65em;
 }
-
-input.ac[type=checkbox] + label:before{
-  display: none;
-}
-
 input[type=checkbox]:checked + label:before,
 input[type=radio]:checked + label:before {
   background: #3d4449;
@@ -2300,7 +2295,6 @@ ul.actions.fit.small {
 ul.actions.fit.small li {
   padding: 0 0 0 0.5em;
 }
-
 ul.pagination {
   cursor: default;
   list-style: none;
@@ -2361,21 +2355,22 @@ dl dt {
 dl dd {
   margin-left: 2em;
 }
- /* Accordion */
+
 .accordion > dt {
-  background-color: orange;
+  background-color: #f56a6a;
   margin-bottom: 5px;
   padding: 5px 5px;
-  color: white;
+  color: #9fa3a6;
   toggle: show;
-  width:99%;
-  }
-  .accordion > dd {
-    margin-bottom: 10px;
-    margin-left: 0px;
-    align: left;
-    toggle-visibility: toggle show;
-  }
+  width: 99%;
+}
+
+.accordion > dd {
+  margin-bottom: 10px;
+  margin-left: 0px;
+  align: left;
+  toggle-visibility: toggle show;
+}
 
 /* Table */
 .table-wrapper {
