--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2360,7 +2360,8 @@ dl dd {
   background-color: #f56a6a;
   margin-bottom: 5px;
   padding: 5px 5px;
-  color: #9fa3a6;
+  color: #3d4449;
+  font-weight: 600;
   toggle: show;
   width: 99%;
 }
