--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -6,8 +6,8 @@
         <p>A data scientist with a Ph.D. in Oceanography from Scripps Institution of Oceanography</p>
       </header>
       <p>My research focused on studying how environmental changes impact marine microbial distributions. 
-      I have over 8 years of experience with managing, interpreting, and visualizing large environmental, ecologicaly, and metegenomic datasets.
-      Throughout my community, I am a notable R expert and commonly teach colleagues how to run statistical analyses, interpret model output, and visualize model results.
+      I have over 8 years of experience with managing, interpreting, and visualizing large environmental, ecological, and metegenomic datasets.
+      Throughout my community, I am a notable R expert and commonly teach colleagues how to run statistical analyses, interpret model output, and visualize model results. 
         I am a seasoned mentor, a recognized leader in equity, diversity, and inclusion initiatives, and have been praised as an effective science communicator. </p>
       <ul class="actions">
         <li><a href="{{ 'CV.html' | absolute_url }}" class="button big">Learn More</a></li>
