--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -41,6 +41,9 @@
 
 		&:active {
 			background-color: transparentize(_palette(accent), 0.85);
+			&:after {
+				content: "\2212";
+			  }
 		}
 
 		&.icon {
@@ -83,5 +86,28 @@
 		&:disabled {
 			@include vendor('pointer-events', 'none');
 			opacity: 0.25;
+		}
+
+		&.collapsible {
+			background-color: _palette(accent);
+			color: _palette(bg);
+			cursor: pointer;
+			padding: 18px;
+			width: 100%;
+			border: none;
+			text-align: left;
+			outline: none;
+			
+			&:hover {
+				background-color: lighten(_palette(accent), 3);
+			}
+
+			&:after {
+				content: '\002B';
+				color: white;
+				font-weight: bold;
+				float: right;
+				margin-left: 5px;
+			  }
 		}
 	}
