--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -43,7 +43,7 @@
 	@import 'components/list';
 	@import 'components/table';
 	@import 'components/button';
-	@import 'components/content';
+	@import 'components/collapsible';
 	@import 'components/mini-posts';
 	@import 'components/features';
 	@import 'components/posts';
