--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2364,8 +2364,14 @@ dl dd {
   font-weight: 600;
   toggle: show;
   width: 99%;
+  height: 3.5em;
+  font-family: "Roboto Slab", serif;
+  font-size: 0.8em;
+  font-weight: 700;
+  letter-spacing: 0.075em;
+  line-height: 3.5em;
 }
-.accordion > dt :after {
+.accordion > dt:after {
   content: "+";
   color: white;
   font-weight: bold;
