--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import 'font-awesome.min.css';
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700");
 /*
@@ -2359,7 +2360,7 @@ dl dd {
 .accordion > dt {
   background-color: #f67878;
   margin-bottom: 5px;
-  padding: 5px 5px;
+  padding: 3px 5px;
   color: #3d4449;
   font-weight: 600;
   toggle: show;
@@ -2372,11 +2373,14 @@ dl dd {
   line-height: 3.5em;
 }
 .accordion > dt:after {
-  content: "+";
+  content: "▼";
   color: white;
   font-weight: bold;
   float: right;
   margin-left: 5px;
+}
+.accordion > dt:hover {
+  background-color: rgba(245, 106, 106, 0.05);
 }
 
 .accordion > dd {
