--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2364,14 +2364,13 @@ dl dd {
   border-radius: 0.375em;
   border: 0;
   box-shadow: inset 0 0 0 2px #f56a6a;
-  color: #3d4449;
-  font-weight: 600;
+  color: #7f888f;
+  font-weight: 400;
   toggle: show;
   width: 99%;
   height: 3.5em;
   font-family: "Roboto Slab", serif;
   font-size: 0.9em;
-  font-weight: 700;
   letter-spacing: 0.075em;
   line-height: 3.5em;
 }
@@ -2383,7 +2382,7 @@ dl dd {
   margin-left: 5px;
 }
 .accordion > dt:hover {
-  background-color: #f67474;
+  background-color: #f56f6f;
 }
 
 .accordion > dd {
