Update accordion in modeling html

--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -261,7 +261,7 @@
 		border-radius: _size(border-radius);
 		border: 0;
 		box-shadow: inset 0 0 0 2px _palette(accent);
-		color: _palette(fg);
+		color: _palette(fg-bold);
 		font-weight: _font(weight);
 		toggle: show;
 		width:99%;
