--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2364,7 +2364,7 @@ dl dd {
   border-radius: 0.375em;
   border: 0;
   box-shadow: inset 0 0 0 2px #f56a6a;
-  color: #7f888f;
+  color: #3d4449;
   font-weight: 400;
   toggle: show;
   width: 99%;
