--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -262,7 +262,7 @@
 		border: 0;
 		box-shadow: inset 0 0 0 2px _palette(accent);
 		color: _palette(fg-bold);
-		font-weight: _font(weight);
+		font-weight: _font(weight-bold);
 		toggle: show;
 		width:99%;
 		height: 3.5em;
