--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -259,10 +259,8 @@
 		margin-bottom: 5px;
 		padding: 2px 5px;
 		border-radius: _size(border-radius);
-		border: 0;
-		box-shadow: inset 0 0 0 2px _palette(accent);
 		color: _palette(fg-bold);
-		font-weight: _font(weight-bold);
+		font-weight: bold;
 		toggle: show;
 		width:99%;
 		height: 3.5em;
@@ -287,4 +285,5 @@
 		  margin-left: 0px;
 		  align: left;
 		  toggle-visibility: toggle show;
+		  background-color: _palette(border-bg);
 		}
