--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2362,10 +2362,8 @@ dl dd {
   margin-bottom: 5px;
   padding: 2px 5px;
   border-radius: 0.375em;
-  border: 0;
-  box-shadow: inset 0 0 0 2px #f56a6a;
   color: #3d4449;
-  font-weight: 600;
+  font-weight: bold;
   toggle: show;
   width: 99%;
   height: 3.5em;
@@ -2390,6 +2388,7 @@ dl dd {
   margin-left: 0px;
   align: left;
   toggle-visibility: toggle show;
+  background-color: rgba(230, 235, 237, 0.25);
 }
 
 /* Table */
