--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2389,6 +2389,7 @@ dl dd {
   align: left;
   toggle-visibility: toggle show;
   background-color: rgba(230, 235, 237, 0.25);
+  width: 99%;
 }
 
 /* Table */
